# mySTARFM

./: pyproject.toml
results/: output.tif  prediction.tif
src/: compareImages.ipynb  convertArrayToImage.ipynb  dividePixels.ipynb  edgeDetection.ipynb  parameters.py  spectralDistance.ipynb  starfm.py  test.py
