[tool.poetry]
name = "mystarfm"
version = "0.1.0"
description = ""
authors = ["Shubhrose Singh <shubhroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.68"
ipykernel = "^6.21.1"
rasterio = "^1.3.6"
black = "^23.1.0"
scikit-image = "^0.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
